# rajat-portfolio

./: Rajat Khandelwal.docx
rajat-portfolio/: .env.example  .gitignore  README.md  tracking.md
rajat-portfolio/backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
rajat-portfolio/backend/app/: main.py
rajat-portfolio/backend/app/api/: chat_routes.py  contact_routes.py
rajat-portfolio/backend/app/core/: config.py  logging_config.py
rajat-portfolio/backend/app/data/: rajat_khandelwal_profile.md
rajat-portfolio/backend/app/database/: contact_repository.py  supabase_client.py  vector_repository.py
rajat-portfolio/backend/app/services/: chat_service.py  embedding_service.py  knowledge_base.py  langgraph_agent.py  retrieval_service.py
rajat-portfolio/backend/scripts/: check_embedding_status.py
rajat-portfolio/frontend/: package-lock.json  package.json  tailwind.config.ts
rajat-portfolio/frontend/src/app/: layout.tsx  page.tsx
rajat-portfolio/frontend/src/app/about/: page.tsx
rajat-portfolio/frontend/src/app/api/frontend-log/: route.ts
rajat-portfolio/frontend/src/app/contact/: page.tsx
rajat-portfolio/frontend/src/app/contact/admin/: page.tsx
rajat-portfolio/frontend/src/app/experience/: page.tsx
rajat-portfolio/frontend/src/app/experience/tcs-agentic-ai/: page.tsx
rajat-portfolio/frontend/src/app/projects/: page.tsx
rajat-portfolio/frontend/src/components/: ChatbotWindow.tsx  ProjectCard.tsx
rajat-portfolio/frontend/src/lib/: api.ts  frontendLogger.ts
rajat-portfolio/frontend/src/styles/: globals.css
(+4 files in other folders)
